SDKs/swig/Examples/test-suite/errors/cpp_private_inherit.i
version https://git-lfs.github.com/spec/v1
oid sha256:c534502e4e5787130018d486c46ae4bbed61f4dccc02150236c7d6feac0f7740
size 92
